@@ -1520,11 +1520,6 @@ minibuffer."
 (define-advice toggle-input-method (:before (&rest _) rime)
   (setq default-input-method "rime"))
 
-(define-advice rime-input-method (:before (&rest _) exwm-xim)
-  (when (bound-and-true-p exwm-xim-buffer-p)
-    (setq-local rime--temporarily-ignore-predicates t)
-    (rime-active-mode)))
-
 ;;;; kinsoku
 
 (setq word-wrap-by-category t)
