@@ -112,6 +112,13 @@
 (require 'org-crypt)
 (org-crypt-use-before-save-magic)
 
+;;;; rime
+
+(define-advice rime-input-method (:before (&rest _) exwm-xim)
+  (when (bound-and-true-p exwm-xim-buffer-p)
+    (setq-local rime--temporarily-ignore-predicates t)
+    (rime-active-mode)))
+
 ;;;; firefox
 
 (straight-use-package
