@@ -1,5 +1,8 @@
 2025-01-04  Zhengyi Fu  <i@fuzy.me>
 
+	* init.el:
+	* exwm-settings.el: Move rime workaround for EXWM to exwm-settings.el.
+
 	* init.el: bind puni commands in lisp-mode-shared-map instead of
 	lisp-data-mode-map.
 
